# 2DXngine

./: .gitignore  .gitmodules  2DXngine.Test.xml  2DXngine.sln  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  appveyor.yml  create_vs_solution.ps1  install.brew.dependecies.sh
src/2DXngine.Engine/: CMakeLists.txt
src/2DXngine.Engine/AppImplementations/: WindowApp.cpp  WindowApp.h
src/2DXngine.Engine/AppImplementations/Builder/: AppBuilder.cpp
src/2DXngine.Engine/AppImplementations/SDLEvents/: SDLEventMapper.cpp  SDLEventMapper.h  SDLEventsMapperService.cpp
src/2DXngine.Engine/AppImplementations/SDLEvents/Mappers/: KeyboardEventMapper.cpp  KeyboardEventMapper.h  MouseEventsMapper.cpp  MouseEventsMapper.h  WindowEventsMapper.cpp
src/2DXngine.Engine/Audio/: MusicService.cpp  MusicService.h  SoundService.cpp  SoundService.h
src/2DXngine.Engine/ComponentModel/: DrawableComponent.cpp  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  UpdateableComponent.cpp
src/2DXngine.Engine/Components/: Components.h
src/2DXngine.Engine/Components/Behaviors/: ParticleSystemBehavior.cpp  ParticleSystemBehavior.h
src/2DXngine.Engine/Components/Behaviors/AI/: AITreeExecutorBehavior.cpp  AITreeExecutorBehavior.h
src/2DXngine.Engine/Components/Behaviors/ParticleSystem/: BaseTypes.cpp  BaseTypes.h  ParticleGenerators.cpp  ParticleGenerators.h  ParticleSystemBehavior.cpp  ParticleSystemBehavior.h  ParticleUpdaters.cpp  ParticleUpdaters.h
src/2DXngine.Engine/Components/Data/: NavMeshComponent.cpp  NavMeshComponent.h  TextComponent.h
src/2DXngine.Engine/Components/Data/AI/: AINode.cpp  AINode.h  BehaviorTreeEvaluator.cpp  BehaviorTreeEvaluator.h  BehaviorTreeValidator.cpp  BehaviorTreeValidator.h
src/2DXngine.Engine/Components/Graphics/: AnimationComponent.cpp  AnimationComponent.h  AnimationDrawableComponent.cpp  FontDrawableComponent.cpp  ParticleSystemDrawable.cpp  ParticleSystemDrawable.h  SpriteComponent.cpp  SpriteDrawableComponent.cpp  SpriteDrawableComponent.h  SpriteSheetComponent.cpp  SpriteSheetComponent.h  Transform.h
src/2DXngine.Engine/Components/Graphics/AnimationFactory/: Animation.h  XMLSpritesheetAnimationFactory.cpp  XMLSpritesheetAnimationFactory.h
src/2DXngine.Engine/Components/Interactions/: ClickableComponent.h
src/2DXngine.Engine/Config/: ActionsConfig.cpp  ConfigSection.cpp  ConfigSection.h  ConfigurationService.cpp  ConfigurationService.h  GraphicConfig.cpp  LanguageConfig.cpp  LoggerConfig.cpp  LoggerConfig.h
src/2DXngine.Engine/ContentManagement/: Asset.cpp  AssetPath.cpp  AssetPath.h  AssetTypes.cpp
src/2DXngine.Engine/ContentManagement/DefaultAssets/: Bitmap.cpp  Bitmap.h  Mp3Sound.h  OggSound.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TTFont.h  Texture.cpp  Texture.h
src/2DXngine.Engine/Graphics/: Camera.cpp  Camera.h  Color.h  GraphicDevice.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  SamplerState.cpp  SamplerState.h  SpriteBatch.cpp  SpriteBatch.h
src/2DXngine.Engine/Input/: InputService.cpp  InputService.h  KeyboardStateHandler.h  MouseStateHandler.h
src/2DXngine.Engine/Integrations/Tiled/: GameObjectFactories.cpp  GameObjectFactories.h  GameObjectFactory.h
src/2DXngine.Engine/Scenes/: LoadableScene.cpp  PostProcessHandler.h  Scene.h  SceneBehaviorManager.h  SceneManagerService.cpp  SceneRenderSystem.cpp  SceneUpdateSystem.h
src/2DXngine.Engine/Scenes/PostProcessing/: PostProcessTask.cpp
src/2DXngine.Engine/Services/: Service.cpp  Service.h  ServiceLocator.h
src/2DXngine.Engine/Translations/: TranslationService.cpp  TranslationService.h
src/2DXngine.Engine/TypeInformation/: BaseTypesDeclarations.cpp  BaseTypesDefinitions.h  TypeCache.cpp  TypeInfo.cpp
src/2DXngine.Engine/Utils/: BackgroundTask.cpp  File.cpp  File.h  GameHandler.cpp  Path.cpp  Path.h  SimpleCSV.cpp  SimpleCSV.h  StringUtils.cpp  StringUtils.h
src/2DXngine.Engine/Utils/Errors/: Result.cpp  Result.h
src/2DXngine.Engine/Utils/Events/: EventHandler.h
src/2DXngine.Engine/Utils/Logger/: LoggerService.cpp
src/2DXngine.Engine/Utils/Math/: PointI.cpp  PointI.h  RectangleF.cpp  RectangleI.h
src/2DXngine.Main/: CMakeLists.txt  cfg.ini  main.cpp
src/2DXngine.Main/Content/: sparks.xml
src/2DXngine.Main/TestImplementation/: DeclaredTypes.cpp  DefinedTypes.h  DotTestController.cpp  DotTestController.h  SceneTest.cpp  SceneTest.h  TestGameHandler.cpp  TestGameHandler.h  TestGameHandlerWithScenes.cpp  TestGameHandlerWithScenes.h  TestMouseCoordsComponent.cpp  TestMouseCoordsComponent.h  TestTiledScene.cpp  TestTiledScene.h
src/2DXngine.Test/: CMakeLists.txt
src/2DXngine.Test/Assets/: ShaderProgramTest.cc  ShaderTest.cc  TextureTest.cc
src/2DXngine.Test/Components/: ColliderComponentTest.cc  SpriteSheetComponentTest.cc  TextDataComponent.cc
src/2DXngine.Test/Components/AI/: AiTreeTest.cc
src/2DXngine.Test/Components/Animation/: AnimationComponentTest.cc  AnimationFactoryTest.cc  ParsersTest.cc
src/2DXngine.Test/Content/: TestAnimation.xml
src/2DXngine.Test/GameObject/: GameObjectBaseFunctionsTest.cc  GameObjectComponentModelTest.cc  GameObjectGraphTest.cc  GameObjectLifetimeTest.cc  GameObjectManagerTest.cc
src/2DXngine.Test/Graphics/: CameraUnprojectTest.cc  ColorFromStringTest.cc  RenderTargetTest.cc
src/2DXngine.Test/Integration_Tiled/Factory/: CreateTileLayerObjectsTest.cc  CreateTilesetGameObjectTest.cc  FactoryTestFixture.h
src/2DXngine.Test/Integration_Tiled/ParserTest/: ImageLayerTest.cc  MapGroupTest.cc  ParseMapTest.cc  ParseObjectGroupTest.cc  TileLayerTest.cc  TiledFixture.h  TilesetTest.cc
src/2DXngine.Test/Scenes/: TestScene.h
src/2DXngine.Test/Services/: ConfigurationServiceTest.cc  ContentManagerTest.cc  TranslationServiceTest.cc
src/2DXngine.Test/TypeSystem/: TestComponents.cc  TestComponents.h  TestTypes.h  TestTypesHierarhy.h  TypeIdHelperTest.cc
src/2DXngine.Test/Utils/: BackgroundTaskTest.cc  EventHandlingTest.cc  EventTestData.h  PropTestClass.h  PropertyMacroTest.cc  RectangleTest.cc  ResultTest.cpp  SimpleCsvTest.cc  StringUtilsTest.cc
(+332 files in other folders)
